--- a/Animal_Status/Views/AdminPanel/Users.cshtml
+++ b/Animal_Status/Views/AdminPanel/Users.cshtml
@@ -14,6 +14,7 @@
             <p>
                 @Html.DisplayFor(modelItem => item.Email)
             </p>
+            <a href="#" >Edit</a>
 
            
 
