--- a/Animal_Status/Views/Home/Index.cshtml
+++ b/Animal_Status/Views/Home/Index.cshtml
@@ -1,8 +1,28 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    sffssdf
+@await Html.PartialAsync("_ModalPartial")
+<div class="container mt-5">
+    <div id="carouselExample" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/img/carousel1.png" class="d-block w-100" alt="Slide 1" >
+            </div>
+            <div class="carousel-item">
+                <img src="~/img/carousel2.png" class="d-block w-100" alt="Slide 2" >
+            </div>
+            <div class="carousel-item">
+                <img src="~/img/carousel3.png" class="d-block w-100" alt="Slide 3" >
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
-<script>@await Html.PartialAsync("_ModalPartial")</script>
+
