--- a/Animal_Status/Views/Cabinet/Create.cshtml
+++ b/Animal_Status/Views/Cabinet/Create.cshtml
@@ -48,9 +48,9 @@
 
     <div class="form-group">
         <label asp-for="Picture">Фотография</label>
-        <input asp-for="Picture" type="file" class="form-control" />
+        <input asp-for="Picture" name="imageFile" accept="image/*" type="file" class="form-control" />
         <span asp-validation-for="Picture" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Добавить</button>
+    <button type="submit" value="Create" class="btn btn-primary">Добавить</button>
 </form>
