--- a/Animal_Status/Views/AdminPanel/CreateType.cshtml
+++ b/Animal_Status/Views/AdminPanel/CreateType.cshtml
@@ -10,5 +10,5 @@
     </div>
 
     <button type="submit" class="btn btn-success">Добавить</button>
-    <a asp-action="Index" class="btn btn-secondary">Отмена</a>
+    <a asp-action="Types" class="btn btn-secondary">Отмена</a>
 </form>
