--- a/Animal_Status/Views/AdminPanel/index.cshtml
+++ b/Animal_Status/Views/AdminPanel/index.cshtml
@@ -6,4 +6,4 @@
 }
 <a class="navbar-brand" asp-area="" asp-controller="AdminPanel" asp-action="Users">Пользователи</a>
 <a class="navbar-brand" asp-area="" asp-controller="AdminPanel" asp-action="Types">Типы животных</a>
-<a class="navbar-brand" asp-area="" asp-controller="AdminPanel" asp-action="Users">Прививки</a>
+<a class="navbar-brand" asp-area="" asp-controller="AdminPanel" asp-action="Vaccines">Прививки</a>
