--- a/Animal_Status/Views/Shared/_Layout.cshtml
+++ b/Animal_Status/Views/Shared/_Layout.cshtml
@@ -24,12 +24,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cabinet" asp-action="Pets">Личный кабинет</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AdminPanel" asp-action="index">Панель админа</a>
-                        </li>
+                        
                         @if (User.Identity.IsAuthenticated == false)
                         {
                             <li class="nav-item">
@@ -40,6 +35,16 @@
                         }
                         @if (User.Identity.IsAuthenticated == true)
                         {
+                            
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Cabinet" asp-action="Pets">Личный кабинет</a>
+                             </li>
+                            @if (User.IsInRole("0"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="AdminPanel" asp-action="index">Панель админа</a>
+                                </li>
+                            }
                             <li class="nav-item">
                                 <form method="post" asp-controller="Account" asp-action="Logout">
                                     <input  class="btn btn-primary" type="submit" value="Выход" />
