--- a/Animal_Status/Views/Cabinet/Create.cshtml
+++ b/Animal_Status/Views/Cabinet/Create.cshtml
@@ -21,7 +21,7 @@
 
     <div class="form-group">
         <label asp-for="DateOfBirth">Дата рождения</label>
-        <input asp-for="DateOfBirth" type="date" class="form-control" />
+        <input asp-for="DateOfBirth" type="date" value="@DateTime.Now.ToString("yyyy-MM-dd")" class="form-control" />
         <span asp-validation-for="DateOfBirth" class="text-danger"></span>
     </div>
 
