--- a/Animal_Status/Views/Cabinet/AddVeterinaryRecord.cshtml
+++ b/Animal_Status/Views/Cabinet/AddVeterinaryRecord.cshtml
@@ -7,7 +7,7 @@
 
     <div class="form-group">
         <label asp-for="VisitDate" class="control-label">Дата посещения:</label>
-        <input asp-for="VisitDate" class="form-control" />
+        <input asp-for="VisitDate" type="date" value="@DateTime.Now.ToString("yyyy-MM-dd")" class="form-control" />
         <span asp-validation-for="VisitDate" class="text-danger"></span>
     </div>
 
