--- a/Animal_Status/Views/Cabinet/Gallery.cshtml
+++ b/Animal_Status/Views/Cabinet/Gallery.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Animal_Status.AnimalGalleryViewModel
 
 <div class="container">
-    <h2 class="mt-5 mb-4">Галерея животного № @Model.AnimalId</h2>
+    <h2 class="mt-5 mb-4">Галерея</h2>
 
     <div class="row">
         @foreach (var imagePath in Model.ImagePaths)
